--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".BluetoothDeviceList">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BluetoothConnectionReceiving">
+        <activity android:name=".BluetoothConnectionReceiving" >
+
+        </activity>
+        <activity android:name=".WifiDeviceList" />
+        <activity android:name=".WifiOrBluetoothSelection">
         </activity>
     </application>
 
